...
                                        <rect key="frame" x="0.0" y="42.666666666666671" width="533" height="101.00000000000001"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ay0-hB-IpU">
                                                <rect key="frame" x="497" y="39.333333333333329" width="34" height="22"/>
                                                <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="17"/>
...
                                        </constraints>
                                    </view>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Put the Bull's Eye as close as you can to" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Is-ST-p6k">
                                        <rect key="frame" x="68.333333333333371" y="20" width="396" height="22.666666666666671"/>
                                        <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="17"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6hQ-1r-Cxp">
                                        <rect key="frame" x="20" y="283" width="21" height="21"/>
                                        <state key="normal" image="StartOverIcon" backgroundImage="SmallButton">
                                            <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                        <rect key="frame" x="492" y="283" width="21" height="21"/>
                                        <accessibility key="accessibilityConfiguration" identifier="info"/>
                                        <state key="normal" image="InfoButton" backgroundImage="SmallButton"/>
                                        <connections>
                                            <segue destination="voi-v3-2xs" kind="presentation" modalTransitionStyle="flipHorizontal" id="Czz-Um-0gx"/>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="9999999" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Dj-Ef-kMj">
                                        <rect key="frame" x="152.00000000000003" y="277" width="72" height="22"/>
                                        <accessibility key="accessibilityConfiguration" identifier="scoreNumber"/>
                                        <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="17"/>
                                        <color key="textColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="999" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9G4-8A-Pbd">
                                        <rect key="frame" x="441" y="277" width="31" height="22"/>
                                        <accessibility key="accessibilityConfiguration" identifier="roundNumber"/>
                                        <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="17"/>
                                        <color key="textColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
...
                                        <inset key="contentEdgeInsets" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
                                        <size key="titleShadowOffset" width="0.0" height="1"/>
                                        <state key="normal" title="Hit me" backgroundImage="Button-Normal">
                                            <color key="titleColor" red="0.37647058823529411" green="0.11764705882352941" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                            <color key="titleShadowColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Awa-oS-tFt">
                                        <rect key="frame" x="466.33333333333337" y="20" width="34" height="22"/>
                                        <accessibility key="accessibilityConfiguration" identifier="targetLable"/>
                                        <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="17"/>
                                        <color key="textColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
...
                                <inset key="contentEdgeInsets" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
                                <size key="titleShadowOffset" width="0.0" height="1"/>
                                <state key="normal" title="close" backgroundImage="Button-Normal">
                                    <color key="titleColor" red="0.37647058820000001" green="0.1176470588" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
